test/files/neg/t6829.check
t6829.scala:35: error: type mismatch;
 found   : AgentSimulation.this.state.type (with underlying type G#State)
 required: _10.State
    lazy val actions: Map[G#Agent,G#Action] = agents.map(a => a -> a.chooseAction(state)).toMap
                                                                                  ^
t6829.scala:45: error: trait AgentSimulation takes type parameters
                                               pastHistory: List[G#State] = Nil) extends AgentSimulation
                                                                                         ^
t6829.scala:47: error: class LearningSimulation takes type parameters
    lazy val step: LearningSimulation = {
                   ^
t6829.scala:49: error: not found: value actions
        val (s,a,s2) = (state,actions(agent),nextState)
                              ^
t6829.scala:49: error: not found: value nextState
        val (s,a,s2) = (state,actions(agent),nextState)
                                             ^
t6829.scala:50: error: type mismatch;
 found   : s.type (with underlying type Any)
 required: _54.State where val _54: G
        val r = rewards(agent).r(s,a,s2)
                                 ^
t6829.scala:51: error: type mismatch;
 found   : s.type (with underlying type Any)
 required: _51.State
        agent.learn(s,a,s2,r): G#Agent
                    ^
t6829.scala:53: error: not found: value nextState
Error occurred in an application involving default arguments.
      copy(agents = updatedAgents, state = nextState, pastHistory = currentHistory)
                                           ^
t6829.scala:53: error: not found: value currentHistory
Error occurred in an application involving default arguments.
      copy(agents = updatedAgents, state = nextState, pastHistory = currentHistory)
                                                                    ^
9 errors found
